--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,10 +19,13 @@
       "bun-types", // add Bun global
       "@types/web"
     ],
+    "baseUrl": ".",
     "paths": {
-      "@/*": ["./src/*"],
-      "public/*": ["./public/*"],
-      "configs/*": ["./config/*"],
+      "@/*": ["src/*"],
+      "@public/*": ["public/*"],
+      "@configs/*": ["configs/*"],
+      "@components/*": ["src/components/*"],
+      "@utils/*": ["src/utils/*"]
     }
   }
 }
