--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "@types/react-dom": "^18.2.0",
     "@types/web": "^0.0.99",
     "bun-types": "latest",
-    "react-refresh": "0.10.0"
+    "sass": "^1.69.0"
   },
   "peerDependencies": {
     "typescript": "^5.0.0"
