--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,7 +26,7 @@
       "@configs/*": ["configs/*"],
       "@components/*": ["src/components/*"],
       "@utils/*": ["src/utils/*"],
-      "@scss/*": ["src/scss/*"],
+      "@scss/*": ["scss/*"],
     }
   }
 }
