--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "module": "index.ts",
   "type": "module",
   "scripts": {
-    "dev": "bun --watch run index.tsx"
+    "dev": "bun --watch run index.tsx",
+    "style": "sass scss/style.scss public/style.css",
+    "style:watch": "sass --watch scss/style.scss public/style.css"
   },
   "devDependencies": {
     "@types/react": "^18.2.0",
